# Parallx

./: .gitignore  ARCHITECTURE.md  Parallx.bat  Parallx.vbs  ai-eval-output.txt  flaky-output.txt  full-run.txt  index.html  logo-preview.html  package-lock.json  package.json  playwright.ai-eval.config.ts  playwright.config.ts  test-results.json  tg-diff.txt  tsconfig.json  vitest.config.ts
.github/: AGENTS.md
demo-workspace/: Accident Quick Reference.md  Agent Contacts.md  Auto Insurance Policy.md  Claims Guide.md  Claims Workflow Architecture.md  SMOKE_TEST_CHECKLIST.md  Vehicle Info.md
docs/: BLOCK_INTERACTION_RULES.md  BLOCK_REGISTRY.md  BSR_INTERACTION_GAP_PLAN.md  CANVAS_DATA_SERVICE_INTERFACE_PLAN.md  CANVAS_MENU_REGISTRY_PLAN.md  CANVAS_STRUCTURAL_MODEL.md  D1_FOLLOWUP_RUNNER_AUDIT.md  D1_FOLLOWUP_RUNNER_TRACKER.md  D1_MCP_INTEGRATION_AUDIT.md  D1_MCP_INTEGRATION_GAP_MAP.md  D1_MCP_INTEGRATION_TRACKER.md  D2_CHAT_COMMANDS_AUDIT.md  D2_CHAT_COMMANDS_AUDIT_R2.md  D2_CHAT_COMMANDS_GAP_MAP_R2.md  D3_DOCTOR_DIAGNOSTICS_GAP_MAP.md  D3_DOCTOR_DIAGNOSTICS_TRACKER.md  D3_STEER_CHECK_AUDIT.md  D4_CRON_SCHEDULING_AUDIT.md  D4_CRON_SCHEDULING_TRACKER.md  D4_RUNTIME_HOOKS_AUDIT.md  D4_RUNTIME_HOOKS_GAP_MAP.md  D4_RUNTIME_HOOKS_TRACKER.md  D5_MEDIA_VISION_AUDIT.md  D5_MEDIA_VISION_GAP_MAP.md  D5_SUBAGENT_SPAWNING_AUDIT.md  D5_SUBAGENT_SPAWNING_TRACKER.md  D6_COMPACTION_DEPTH_AUDIT.md  D6_COMPACTION_DEPTH_GAP_MAP.md  D6_COMPACTION_DEPTH_TRACKER.md  (+138 more)
electron/: database.cjs  (+8 more)
tools/docling-bridge/: README.md  pyproject.toml
tools/docling-bridge/parallx_docling/: server.py
(+1361 files in other folders)
